Added grape seeds (red, white) and creative mode tab

--- a/src/main/resources/assets/mcwine/lang/en_us.json
+++ b/src/main/resources/assets/mcwine/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.mcwine.grape_seed_red": "Red Grape Seed",
-  "item.mcwine.grape_seed_white": "White Grape Seed"
+  "item.mcwine.grape_seed_white": "White Grape Seed",
+
+  "itemGroup.mcwinetab": "Minecraft Wine"
 }
