Added crop sticks for crops. No interaction yet. No looting on destruction yet.

--- a/src/main/resources/assets/mcwine/lang/en_us.json
+++ b/src/main/resources/assets/mcwine/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.mcwine.grape_seed_red": "Red Grape Seed",
   "item.mcwine.grape_seed_white": "White Grape Seed",
 
+  "block.mcwine.crop_stick": "Crop Sticks",
+
   "itemGroup.mcwinetab": "Minecraft Wine",
 
 }
